# godot-bevy-game

./: .devenv.flake.nix  .envrc  .gitignore  README.md  devenv.nix
.cargo/: config.toml
.devenv/: devenv.json  flake.json  input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-2-link
.devenv/state/: files.json
godot/: bevy_app_singleton.tscn  icon.svg.import  main.tscn  project.godot  rust.gdextension  rust.gdextension.uid
godot/scenes/: main.tscn  player.tscn
nix/: godot-bin.nix
rust/: Cargo.toml
rust/src/: lib.rs
