[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot-bevy = "0.10.0"
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_state",   # ← was missing, needed for States/OnEnter/in_state
] }
bevy_asset_loader = "0.24"
godot = "0.4"