[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot-bevy = "0.11.0"
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_state",
] }
bevy_asset_loader = "0.25"
godot = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }